fix start/end extra lores in panel